infrastructure/istio/destination-rules/execution-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: execution-service-dr
  namespace: platform
spec:
  host: execution-service.platform.svc.cluster.local

  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

    loadBalancer:
      simple: LEAST_REQUEST

    outlierDetection:
      consecutive5xxErrors: 3
      interval: 20s
      baseEjectionTime: 1m
